# course_work-6

./: .env.sample  .gitignore  README.md  db.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
conf/: celery.py  settings.py  urls.py
mailshots/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
mailshots/management/commands/: send_mailshot.py
mailshots/migrations/: 0001_initial.py  0002_initial.py  0003_mailshotperiodictask_alter_log_mailshot_and_more.py  0004_alter_client_options_alter_log_options_and_more.py  0005_alter_client_options_and_more.py  0006_client_unique_client_for_user.py  0007_alter_mailshotperiodictask_options.py  0008_log_user_alter_mailshotperiodictask_frequency.py
mailshots/templatetags/: statistics.py
services/general/: form_mixins.py  view_mixins.py
services/general/db/: getters.py
services/general/messages/: messages.py  senders.py
services/mailshots/: senders.py
services/users/: __init__.py  view_mixins.py
services/users/confirmation/: messages.py
templates/: base.html  navbar.html
templates/blog/: detail.html  list.html
templates/mailshots/: delete.html  detail.html  disable.html  enable.html  list.html
templates/mailshots/clients/: delete.html  detail.html  form.html  list.html
templates/mailshots/logs/: detail.html  list.html
templates/mailshots/wizard/: clients.html  (+3 more)
templates/users/: detail.html  update.html
users/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
(+20 files in other folders)
